--- a/.github/workflows/translation-ai.yaml
+++ b/.github/workflows/translation-ai.yaml
@@ -1,10 +1,13 @@
-name: translation
+name: Translation by AI
 
 on:
   workflow_dispatch:
 
+env:
+  CN_CLOUD_BRANCH: i18n-zh-release-8.1
+
 jobs:
-  ja:
+  translate:
     runs-on: ubuntu-latest
 
     steps:
@@ -17,7 +20,7 @@ jobs:
       - uses: actions/checkout@v4
         name: Download docs repo and specified branch
         with:
-          ref: "i18n-ja-release-7.1"
+          ref: "${{ env.CN_CLOUD_BRANCH }}"
           path: "docs"
       - uses: actions/setup-node@v4
         name: Setup node 18
@@ -73,12 +76,12 @@ jobs:
         if: steps.git_commit.outputs.committed == 1
         with:
           token: ${{ github.token }}
-          branch: jp-translation/${{ steps.build_id.outputs.id }}
-          title: "ci: JP translation ${{ steps.build_id.outputs.id }}"
+          branch: zh-translation/${{ steps.build_id.outputs.id }}
+          title: "ci: ZH translation ${{ steps.build_id.outputs.id }}"
           body: |
             ### What is changed, added or deleted? (Required)
 
-            Translate docs to Japanese.
+            Translate docs to Chinese.
 
             ### Which TiDB version(s) do your changes apply to? (Required)
 
@@ -90,7 +93,7 @@ jobs:
 
             For details, see [tips for choosing the affected versions](https://github.com/pingcap/docs/blob/master/CONTRIBUTING.md#guideline-for-choosing-the-affected-versions).
 
-            - [x] i18n-ja-release-7.1 (TiDB 7.1 versions)
+            - [x] ${env.CN_CLOUD_BRANCH}
 
             ### What is the related PR or file link(s)?
 
