--- a/.github/workflows/translation-ai.yaml
+++ b/.github/workflows/translation-ai.yaml
@@ -54,29 +54,34 @@ jobs:
         run: |
           cp -r markdown-translator/output/markdowns/* docs/
 
+      - name: Set build ID
+        id: build_id
+        run: echo "::set-output name=id::$(date +%s)"
+
       - name: Git commit and push
+        id: git_commit
         run: |
           cd docs
           git status
           git config user.name github-actions
           git config user.email github-actions@github.com
+          git checkout -b zh-translation/${{ steps.build_id.outputs.id }}
           git add .
           if git status | grep -q "Changes to be committed"
           then
             git commit -m "Update translated files"
+            git push origin zh-translation/${{ steps.build_id.outputs.id }}
             echo "::set-output name=committed::1"
           else
             echo "No changes detected, skipped"
           fi
-      - name: Set build ID
-        id: build_id
-        run: echo "::set-output name=id::$(date +%s)"
       - name: Create PR
         uses: peter-evans/create-pull-request@v5
         if: steps.git_commit.outputs.committed == 1
         with:
           token: ${{ github.token }}
           branch: zh-translation/${{ steps.build_id.outputs.id }}
+          base: ${{ env.CN_CLOUD_BRANCH }}
           title: "ci: ZH translation ${{ steps.build_id.outputs.id }}"
           body: |
             ### What is changed, added or deleted? (Required)
