--- a/.github/workflows/translation-cron.yml
+++ b/.github/workflows/translation-cron.yml
@@ -11,6 +11,20 @@ env:
   CLOUD_BRANCH: i18n-ja-release-8.1
 
 jobs:
+  dispatch-translation-ai:
+    runs-on: ubuntu-latest
+    continue-on-error: true
+
+    steps:
+      - name: Dispatch translation-ai workflow
+        run: |
+          curl \
+          -X POST \
+          -H "Accept: application/vnd.github+json" \
+          -H "Authorization: token ${{ github.token }}" \
+          https://api.github.com/repos/${{ github.repository }}/actions/workflows/translation-ai.yml/dispatches \
+          -d '{"ref":"main","inputs":{"branch":"main"}}'
+
   # build a matrix of branches to translate, including LTS and Cloud
   build-matrix:
     runs-on: ubuntu-latest
