ci: Rename translation job in workflow to 'translate-ja'

--- a/.github/workflows/translation-cron.yml
+++ b/.github/workflows/translation-cron.yml
@@ -34,7 +34,7 @@ jobs:
       - id: set-matrix
         run: echo "matrix={\"include\":[{\"name\":\"LTS\",\"value\":\"${{ env.LTS_BRANCH }}\"},{\"name\":\"Cloud\",\"value\":\"${{ env.CLOUD_BRANCH }}\"}]}" >> $GITHUB_OUTPUT
 
-  translate:
+  translate-ja:
     needs: build-matrix
     runs-on: ubuntu-latest
     strategy:
