--- a/.github/workflows/translation-zh.yaml
+++ b/.github/workflows/translation-zh.yaml
@@ -79,6 +79,7 @@ jobs:
         uses: peter-evans/create-pull-request@v7
         if: steps.git_commit.outputs.committed == 1
         with:
+          path: "docs"
           token: ${{ github.token }}
           branch: zh-translation/${{ steps.build_id.outputs.id }}
           base: ${{ env.CN_CLOUD_BRANCH }}
