--- a/.github/workflows/translation-zh.yaml
+++ b/.github/workflows/translation-zh.yaml
@@ -43,7 +43,7 @@ jobs:
           cp -r docs/tmp markdown-translator/markdowns
       - name: Copy variables.json to translator folder
         run: |
-          cp docs/tmp/variables.json markdown-translator/variables.json || true
+          cp docs/tmp/variables.json docs/variables.json || true
       - name: Config and translate
         run: |
           cd markdown-translator
