--- a/.github/workflows/translation-cron.yml
+++ b/.github/workflows/translation-cron.yml
@@ -22,7 +22,7 @@ jobs:
           -X POST \
           -H "Accept: application/vnd.github+json" \
           -H "Authorization: token ${{ github.token }}" \
-          https://api.github.com/repos/${{ github.repository }}/actions/workflows/translation-zh.yml/dispatches \
+          https://api.github.com/repos/${{ github.repository }}/actions/workflows/translation-zh.yaml/dispatches \
           -d '{"ref":"master","inputs":{"branch":"master"}}'
 
   # build a matrix of branches to translate, including LTS and Cloud
