--- a/.github/workflows/translation-cron.yml
+++ b/.github/workflows/translation-cron.yml
@@ -80,7 +80,9 @@ jobs:
           cp -r docs/tmp markdown-translator/markdowns
       - name: Copy variables.json to translator folder
         run: |
-          cp docs/tmp/variables.json docs/variables.json || true
+          if [ -f docs/tmp/variables.json ]; then
+            cp docs/tmp/variables.json docs/variables.json
+          fi
       - name: Config and translate
         run: |
           cd markdown-translator
