--- a/.github/workflows/translation-zh.yaml
+++ b/.github/workflows/translation-zh.yaml
@@ -43,7 +43,9 @@ jobs:
           cp -r docs/tmp markdown-translator/markdowns
       - name: Copy variables.json to translator folder
         run: |
+          cp docs/variables.json markdown-translator/markdowns/variables.json
           if [ -f docs/tmp/variables.json ]; then
+            cp docs/tmp/variables.json markdown-translator/markdowns/variables.json
             cp docs/tmp/variables.json docs/variables.json
           fi
       - name: Config and translate
